Clean up bubble widget when users changed.

When lock screen user changes, we rebuild LoginUserView for each user
and any previously opened bubbles needs to be closed in dtor.

Bug: 794254
Change-Id: I7d6e0dada6e0eb96543709d21aa81cd4e4f68ee7
Reviewed-on: https://chromium-review.googlesource.com/852529
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Commit-Queue: Xiaoyin Hu <xiaoyinh@chromium.org>
Cr-Commit-Position: refs/heads/master@{#527425}
Former-commit-id: d55cc5c690dada54a99baa3809af8be57873b171